service-mesh/istio/gataewy.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: frontend-mtls
      hosts:
        - frontend.local

        #minikube tunnel
     
  #    kubectl create secret generic frontend-mtls \
  # -n istio-system \
  # --from-file=tls.crt=tls.crt \
  # --from-file=tls.key=tls.key \
  # --from-file=ca.crt=rootCA.crt
